--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./assets/.js"></script>
+    <script src="assets\.js"></script>
   </body>
 </html>
