--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet">  
-  
-    <title>Weather Dashboard</title>
+    <link href="assets/css.stylesheet.css" rel="stylesheet">
   </head>
 
   <body>
