re-set .js file source in index.html for github

--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="assets\.js"></script>
+    <script src="assets/.js"></script>
   </body>
 </html>
