--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./assets/.javascript.js"></script>
+    <script src="./assets/javascript.js"></script>
   </body>
 </html>
